--- a/examples/build.xml
+++ b/examples/build.xml
@@ -51,7 +51,7 @@
         <!-- installed: C:/opt/apache-ant-1.10.10/lib/ivy-2.5.0.jar -->
         <taskdef resource="org/apache/ivy/ant/antlib.xml"
             uri="antlib:org.apache.ivy.ant" />
-        <ivy:resolve file="./ivy.xml" showprogress="false" log="download-only" />
+        <ivy:resolve file="../ivy.xml" showprogress="false" log="download-only" />
         <ivy:cachepath pathid="scalac.classpath" conf="default"/>
         <path id="scala3.classpath">
             <!--
