--- a/akka-concurrency/pom.xml
+++ b/akka-concurrency/pom.xml
@@ -25,6 +25,7 @@
         <maven.compiler.version>3.11.0</maven.compiler.version>
         <maven.jar.version>3.3.0</maven.jar.version>
         <scala.maven.version>1.0.0</scala.maven.version>
+        <scalatest.version>3.2.15</scalatest.version>
 
         <!-- Maven plugin dependencies -->
         <m2.directory>${user.home}/.m2/repository</m2.directory>
@@ -33,6 +34,10 @@
         <m2.akka-testkit.jar>${m2.directory}/com/typesafe/akka/akka-testkit_${scala.binary.version}/${akka.version}/akka-testkit_${scala.binary.version}-${akka.version}.jar</m2.akka-testkit.jar>
         <m2.config.jar>${m2.directory}/com/typesafe/config/${config.version}/config-${config.version}.jar</m2.config.jar>
         <m2.scala-library.jar>${m2.directory}/org/scala-lang/scala-library/${scala.version}/scala-library-${scala.version}.jar</m2.scala-library.jar>
+        <m2.scalatest.jar>${m2.directory}/org/scalatest/scalatest_${scala.binary.version}/${scalatest.version}/scalatest_${scala.binary.version}-${scalatest.version}.jar</m2.scalatest.jar>
+		<m2.scalatest-matchers-core.jar>${m2.directory}/org/scalatest/scalatest-matchers-core_${scala.binary.version}/${scalatest.version}/scalatest-matchers-core_${scala.binary.version}-${scalatest.version}.jar</m2.scalatest-matchers-core.jar>
+        <m2.scalatest-shouldmatchers.jar>${m2.directory}/org/scalatest/scalatest-shouldmatchers_${scala.binary.version}/${scalatest.version}/scalatest-shouldmatchers_${scala.binary.version}-${scalatest.version}.jar</m2.scalatest-shouldmatchers.jar>
+        <m2.scalatest-wordspec.jar>${m2.directory}/org/scalatest/scalatest-wordspec_${scala.binary.version}/${scalatest.version}/scalatest-wordspec_${scala.binary.version}-${scalatest.version}.jar</m2.scalatest-wordspec.jar>
     </properties>
 
     <dependencies>
