--- a/alexandreesl-examples/common.gradle
+++ b/alexandreesl-examples/common.gradle
@@ -7,7 +7,7 @@ java {
 }
 
 project.ext {
-    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.2.2"
+    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.0-RC3"
     isLocalInstall = hasProperty("scalaLocalInstall") ? scalaLocalInstall.toBoolean() : false
     isScala3 = scalaVersion.startsWith("3")
     scalacMainClass = isScala3 ? "dotty.tools.dotc.Main": "scala.tools.nsc.Main"
@@ -18,6 +18,7 @@ project.ext {
 
     scalaBinaryVersion = isScala3 ? "3" : "2.13"
     akkaVersion = "2.8.0"
+    logbackVersion = "1.4.6"
     specs2Version = isScala3 ? "5.2.0" : "4.19.0"
     dependencies {
         if (isScala3) {
@@ -29,7 +30,7 @@ project.ext {
         implementation "com.typesafe:config:1.4.2"
         implementation "com.typesafe.akka:akka-actor_${scalaBinaryVersion}:$akkaVersion"
         // test scope
-        testImplementation 'ch.qos.logback:logback-classic:1.4.3'
+        testImplementation 'ch.qos.logback:logback-classic:$logbackVersion'
         testImplementation "com.typesafe.akka:akka-testkit_${scalaBinaryVersion}:$akkaVersion"
         testImplementation 'junit:junit:4.13.2'
         testImplementation "org.specs2:specs2-junit_${scalaBinaryVersion}:$specs2Version"
