--- a/effective-akka/pom.xml
+++ b/effective-akka/pom.xml
@@ -20,10 +20,10 @@
 
         <!-- Maven plugin versions -->
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
-        <akka.version>2.8.0-M6</akka.version>
+        <akka.version>2.8.0</akka.version>
         <config.version>1.4.2</config.version>
         <exec.maven.version>3.1.0</exec.maven.version>
-        <maven.compiler.version>3.10.1</maven.compiler.version>
+        <maven.compiler.version>3.11.0</maven.compiler.version>
         <maven.jar.version>3.3.0</maven.jar.version>
         <scala.maven.version>1.0.0</scala.maven.version>
         <scalatest.version>3.2.15</scalatest.version>
@@ -37,9 +37,9 @@
         <m2.scala-library.jar>${m2.directory}/org/scala-lang/scala-library/${scala.version}/scala-library-${scala.version}.jar</m2.scala-library.jar>
         <m2.scalatest.jar>${m2.directory}/org/scalatest/scalatest_${scala.binary.version}/${scalatest.version}/scalatest_${scala.binary.version}-${scalatest.version}.jar</m2.scalatest.jar>
         <m2.scalatest-funspec.jar>${m2.directory}/org/scalatest/scalatest-funspec_${scala.binary.version}/${scalatest.version}/scalatest-funspec_${scala.binary.version}-${scalatest.version}.jar</m2.scalatest-funspec.jar>
-        <m2.scalatest-mustmatchers.jar>${m2.directory}/org/scalatest/scalatest-mustmatchers_${scala.binary.version}/${scalatest.version}/(scalatest-mustmatchers_${scala.binary.version}-${scalatest.version}.jar</m2.scalatest-mustmatchers.jar>
-        <m2.scalatest-shouldmatchers.jar>${m2.directory}/org/scalatest/scalatest-shouldmatchers_${scala.binary.version}/${scalatest.version}/(scalatest-shouldmatchers_${scala.binary.version}-${scalatest.version}.jar</m2.scalatest-shouldmatchers.jar>
-        <m2.scalatest-wordspec.jar>${m2.direcory}/org/scalatest/scalatest-wordspec_${scala.binary.version}/${scalatest.version}/(scalatest-wordspec_${scala.binary.version}-${scalatest.version}.jar</m2.scalatest-wordspec.jar>
+        <m2.scalatest-mustmatchers.jar>${m2.directory}/org/scalatest/scalatest-mustmatchers_${scala.binary.version}/${scalatest.version}/scalatest-mustmatchers_${scala.binary.version}-${scalatest.version}.jar</m2.scalatest-mustmatchers.jar>
+        <m2.scalatest-shouldmatchers.jar>${m2.directory}/org/scalatest/scalatest-shouldmatchers_${scala.binary.version}/${scalatest.version}/scalatest-shouldmatchers_${scala.binary.version}-${scalatest.version}.jar</m2.scalatest-shouldmatchers.jar>
+        <m2.scalatest-wordspec.jar>${m2.direcory}/org/scalatest/scalatest-wordspec_${scala.binary.version}/${scalatest.version}/scalatest-wordspec_${scala.binary.version}-${scalatest.version}.jar</m2.scalatest-wordspec.jar>
     </properties>
 
     <dependencies>
