--- a/akka-essentials/common.gradle
+++ b/akka-essentials/common.gradle
@@ -7,13 +7,17 @@ java {
 }
 
 project.ext {
-    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.2-RC1"
+    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.2-RC3"
     isLocalInstall = hasProperty("scalaLocalInstall") ? scalaLocalInstall.toBoolean() : false
     isScala3 = scalaVersion.startsWith("3")
     scalacMainClass = isScala3 ? "dotty.tools.dotc.Main": "scala.tools.nsc.Main"
 
     repositories {
         mavenCentral()
+        maven {
+            // https://doc.akka.io/docs/akka/current/typed/actors.html
+            url "https://repo.akka.io/maven"
+        }
     }
 
     scalaBinaryVersion = isScala3 ? "3" : "2.13"
@@ -24,7 +28,7 @@ project.ext {
     // https://mvnrepository.com/artifact/org.specs2/specs2-core
     akkaVersion = "2.9.1"
     configVersion = "1.4.2"
-    logbackVersion = "1.4.11"
+    logbackVersion = "1.4.14"
     specs2Version = isScala3 ? "5.5.1" : "4.20.4"
     dependencies {
         if (isScala3) {
